--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -19,7 +19,7 @@
           {{#if currentUser}}
           <li><a href="profile">Edit Profile</a></li>
           <li><a href="sign-out">Sign Out</a></li>
-          {{#else}}
+          {{else}}
           <li><a href="sign-in">Sign In</a></li>
           <li><a href="sign-up">Sign Up</a></li>
           {{/if}}
@@ -37,7 +37,7 @@
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
-    </div><!-- /.container -->
+    </div> /.container -->
 
 
 </template>
