--- a/client/templates/posts/posts.html
+++ b/client/templates/posts/posts.html
@@ -11,14 +11,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myPostModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myPostModalLabel">Creat A Post</h4>
       </div>
       <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+	        {{#autoForm collection="Posts" id="insertPostForm" type="insert"}}
+	        {{> afQuickField name="body" rows=4}}
+	        <button type="submit" class="btn btn-primary">Send</button>
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        {{/autoForm}}
       </div>
     </div>
   </div>
@@ -33,38 +33,19 @@
 		<p>This is the user's post.</p>
 	</div>
 </div>
+	
+	{{#each posts}}
+	<div class="row post">
+		<div class="col-md-1">
+			<img src="getProfileImg userID">
+		</div>
+		<div class="col-md-11">
+			<small>Posted by {{username}} at {{createdAt}} </small>
+			<p>{{body}}</p>
+		</div>
 
-<div class="row post">
-	<div class="col-md-1">
-		<img src="img/profile.jpg">
 	</div>
-	<div class="col-md-11">
-		<small>Posted by Brad at August 07/2015</small>
-		<p>This is the user's post.</p>
-	</div>
-</div><div class="row post">
-	<div class="col-md-1">
-		<img src="img/profile.jpg">
-	</div>
-	<div class="col-md-11">
-		<small>Posted by Brad at August 07/2015</small>
-		<p>This is the user's post.</p>
-	</div>
-</div><div class="row post">
-	<div class="col-md-1">
-		<img src="img/profile.jpg">
-	</div>
-	<div class="col-md-11">
-		<small>Posted by Brad at August 07/2015</small>
-		<p>This is the user's post.</p>
-	</div>
-</div><div class="row post">
-	<div class="col-md-1">
-		<img src="img/profile.jpg">
-	</div>
-	<div class="col-md-11">
-		<small>Posted by Brad at August 07/2015</small>
-		<p>This is the user's post.</p>
-	</div>
-</div>
+	{{else}}
+		<p>There are no posts to show. Say something now!</p>
+	{{/each}}
 </template>
